# connect-api

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
connect/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
connect/migrations/: 0001_initial.py
connect_api/: settings.py  urls.py  views.py
